--- a/PrimoProgettoTassoneApp/PrimoProgettoTassoneApp/Pages/Index.cshtml
+++ b/PrimoProgettoTassoneApp/PrimoProgettoTassoneApp/Pages/Index.cshtml
@@ -5,5 +5,10 @@
 <html>
 <body>
     <h1>Cerea, nea</h1>
+    <p> Vai alla pagina <a href="/risposta">risposta</a> </p>
+    <form action="/risposta" method="get" >
+        <input type="text" name="testo"/>
+        <input type="submit"/>
+    </form>
 </body>
 </html>
