--- a/PrimoProgettoTassoneApp/PrimoProgettoTassoneApp/Pages/Index.cshtml
+++ b/PrimoProgettoTassoneApp/PrimoProgettoTassoneApp/Pages/Index.cshtml
@@ -6,9 +6,11 @@
 <body>
     <h1>Cerea, nea</h1>
     <p> Vai alla pagina <a href="/risposta">risposta</a> </p>
-    <form action="/risposta" method="get" >
-        <input type="text" name="testo"/>
-        <input type="submit"/>
+    <form action="/risposta" method="get">
+        <p> Nome <input type="text" name="nome" /></p>
+        <p> Cognome <input type="text" name="cognome" /></p>
+        <p> Testo <input type="text" name="testo" /></p>
+        <input type="submit" />
     </form>
 </body>
 </html>
