--- a/PrimoProgettoTassoneApp/PrimoProgettoTassoneApp/Pages/Risposta.cshtml
+++ b/PrimoProgettoTassoneApp/PrimoProgettoTassoneApp/Pages/Risposta.cshtml
@@ -5,6 +5,6 @@
 <html>
 <body>
     <h1>Risposta, nea</h1>
-    <p>Il testo scritto dall'utente è <b>@Model.TestoUtente</b></p>
+    <p>Il testo scritto dall'utente @Model.Cognome @Model.Nome è <b>@Model.Testo</b></p>
 </body>
-</html>
+</html> 
